# commoditization-stack

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
app/: __init__.py  streamlit_app.py
app/shared/: __init__.py  components.py  live_figures.py  palette.py  parameter_panels.py  pdf_export.py  research_levers.py  sankey_charts.py  scenarios.py  state.py
app/tabs/: tab_about.py  tab_appendix_a.py  tab_appendix_b.py  tab_appendix_d.py  tab_appendix_e.py  tab_appendix_f.py  tab_appendix_g.py  tab_company_valuation.py  tab_configuration.py  tab_hype_cycle.py  tab_inverted_discount.py  tab_jurisdictional.py  tab_layers.py  tab_migration.py  tab_overview.py  tab_pdf_export.py  tab_reports.py  tab_research_levers.py
config/: parameters.yaml
config/scenarios/: adas_regulated.yaml  dataflow_pro.yaml  future_2030.yaml  labor_preservation_K04.yaml  neurocertify.yaml  post_genai_2026.yaml  post_genai_2026_brazil.yaml  (+3 more)
docs/: EXTENDING.md  api.md  appendix_g_references.md  dual_channel_correction.md  empirical_calibration_program.md  glossary.md  mensch_2026_primary_source.md
notebooks/: 01_baseline_lean_startup.ipynb  02_post_genai_dynamics.ipynb  03_key_person_inversion.ipynb  04_gartner_remix.ipynb  05_sensitivity_analysis.ipynb
paper/: The_Cost_Gradient_of_the_Build.docx
scripts/: calibration_demo.py  freeze_regression_baseline.py  render_equations.py  run_appendix_a.py  run_appendix_b.py  run_appendix_d.py  run_appendix_e.py  run_appendix_f.py  run_appendix_g.py  run_b26_figures.py  run_deterministic.py  run_jurisdictional.py  run_layer7.py  run_monte_carlo.py  run_section_7_5_migration.py
src/: __init__.py  calibration.py  config.py  death_valley.py  distributional.py  dual_channel.py  dual_channel_mc.py  fiscal_blocs.py  fragility.py  hype_cycle.py  investor.py  jurisdictional.py  migration_dynamics.py  reporting.py  simulation.py  stack_layers.py  startup.py  streaming_case.py  upstream_chain.py  valuation.py  valuation_layered.py  valuation_two_phase.py
tests/: test_b26_figures.py  test_calibration.py  test_dual_channel.py  test_dual_channel_mc.py  test_dual_channel_unified.py  test_regression_baseline.py  test_reporting.py  test_reporting_substantive.py  test_smoke.py
(+14 files in other folders)
