[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commoditization-stack"
version = "1.0.0"
description = "Computational framework for The Cost Gradient of the Build — a layer-decomposed risk-premium model of post-AI firm valuation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Arthur de Miranda Neto", email = "arthur.miranda.neto@gmail.com" },
]
keywords = [
    "valuation",
    "discounted-cash-flow",
    "post-ai-economics",
    "commoditization",
    "knowledge-stack",
    "monte-carlo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28",
    "plotly>=5.18",
]
notebooks = [
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
]
test = [
    "pytest>=7.4",
]
all = [
    "streamlit>=1.28",
    "plotly>=5.18",
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://commoditizationstack.org"
Repository = "https://github.com/commoditizationstack/commoditization-stack"
Issues = "https://github.com/commoditizationstack/commoditization-stack/issues"
Documentation = "https://github.com/commoditizationstack/commoditization-stack#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]
"*" = ["parameters.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
